@@ -1,7 +1,8 @@
+Copyright (c) 2007 Olav Bjorkoy (http://bjorkoy.com)
+
 The Blueprint CSS Framework is available for use in all personal or 
 commercial projects, under both the MIT and the GPL license. You
 may choose the one that fits your project.
-
 
 
 The MIT License
@@ -27,7 +28,6 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
-
 
 
 The GPL License
